# spin-htmx

./: README.md  migration.sql  spin.toml
api/: Cargo.toml
api/src/: lib.rs
app/: index.html  style.css
